# skeleton_old

./: .gitignore  browsersync.js  package.json  release.nix
backend/: backend.cabal
backend/src/: Main.hs
frontend/: browsersync.js  package.json
frontend/assets/: app.css
frontend/src/: app.js
migration/: migration.cabal
migration/src/: Main.hs
