cabal-version: 2.2
name: backend
version: 0.0.1
build-type: Simple

executable backend
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends: base
               , bytestring
               , lucid
               , text
               , servant
               , servant-lucid
               , servant-server
               , transformers
               , warp