cabal-version: 2.2
name: migration
version: 0.0.1
build-type: Simple

executable moto
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  mixins: base hiding (Prelude)
        , relude (Relude as Prelude)
  build-depends: base
               , relude
               , di
               , moto
               , moto-postgresql
               , postgresql-simple
